# melange

./: .codecov.yml  .gitignore  .golangci.yml  .goreleaser.yaml  .sqruff  AGENTS.md  BENCHMARK_SUMMARY.md  CHANGELOG.md  Dockerfile.goreleaser  LICENSE  NEW_BENCHMARK_ANALYSIS.md  README.md  TESTING.md  VERSION  benchmark_analysis.md  cache.go  checker.go  closure.go  closure_test.go  cte_test.go  decision.go  decision_test.go  errors.go  errors_test.go  generate.go  go.mod  go.sum  justfile  melange.go  migrate.go  mise.toml  release-please-config.json  schema.go  schema_test.go  userset_rules.go  validate.go  validate_test.go
blog/: draft1.md  draft2.md  draft3.md  draft4.md  draft5.md
clients/: README.md
clients/python/: README.md  pyproject.toml
clients/python/melange/: __init__.py  checker.py  types.py
docs/: .gitignore  go.mod  hugo.yaml  melange-tuples.md  openfga-support.md  testing.md
doctor/: doctor.go
melange/: README.md  bulk_check.go  bulk_check_test.go  cache.go  cache_test.go  checker.go  checker_test.go  cte_test.go  decision.go  decision_test.go  errors.go  errors_test.go  expand.go  explain.go  go.mod  ident_test.go  melange.go  trace.go  trace_options.go  validator.go
schema/: closure.go  closure_test.go  codegen.go  codegen_list.go  complexity.go  complexity_test.go  ddl.go  errors.go  execer.go  generate.go  generate_test.go  inline_sql.go  migrate.go  schema.go  schema_test.go  userset_rules.go  validate.go  validate_test.go
scripts/: README.md  integration-test-runner.sh  publish-npm.sh  run-integration-tests.sh  sign-macos.sh  (+2 more)
(+579 files in other folders)
