[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "melange"
version = "0.0.0"
description = "Python client for Melange PostgreSQL authorization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "pthm" }
]
keywords = ["authorization", "fga", "openfga", "postgresql", "melange"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
asyncpg = ["asyncpg>=0.29.0"]
psycopg = ["psycopg[binary]>=3.1.0"]

[project.urls]
Homepage = "https://github.com/pthm/melange"
Repository = "https://github.com/pthm/melange.git"
Documentation = "https://github.com/pthm/melange#readme"

[tool.hatch.build.targets.wheel]
packages = ["melange"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
